--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="Arabian Perfumes | Luxury Oud & Exotic Fragrances" />
     <meta property="og:description" content="Discover authentic Arabian perfumes crafted with the finest oud, musk, and exotic essences. Experience 50+ years of artisanal perfumery excellence." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@ArabianPerfumes" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
 
   <body>
